Fixed tests to work with JUnit 5,and Mockito on Java 25